--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
           "lint": "next lint"
      },
      "dependencies": {
+          "@hookform/resolvers": "^5.2.2",
           "@radix-ui/react-dialog": "^1.1.15",
           "@radix-ui/react-label": "^2.1.7",
           "@radix-ui/react-popover": "^1.1.15",
           "@radix-ui/react-slot": "^1.2.3",
+          "@tanstack/react-query": "^5.89.0",
+          "@tanstack/react-query-devtools": "^5.89.0",
+          "axios": "^0.28.0",
           "class-variance-authority": "^0.7.1",
           "clsx": "^2.1.1",
           "date-fns": "^4.1.0",
@@ -21,8 +25,10 @@
           "react": "19.1.0",
           "react-day-picker": "^9.8.1",
           "react-dom": "19.1.0",
+          "react-hook-form": "^7.63.0",
           "recharts": "^2.15.4",
-          "tailwind-merge": "^3.3.1"
+          "tailwind-merge": "^3.3.1",
+          "zod": "^4.1.11"
      },
      "devDependencies": {
           "@eslint/eslintrc": "^3",
